--- a/index.html
+++ b/index.html
@@ -1,2 +1,31 @@
-<!DOCTYPE html><html><body><h1>DailySnap PWA Ready</h1></body></html>
-<!-- updated -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DailySnap PWA</title>
+
+  <!-- Link Manifest -->
+  <link rel="manifest" href="manifest.json">
+
+  <!-- iOS support -->
+  <link rel="apple-touch-icon" href="icons/icon-192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+</head>
+<body>
+  <h1>DailySnap PWA Ready</h1>
+  <p>If you see this text, deployment works!</p>
+
+  <script src="app.js"></script>
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js')
+        .then(() => console.log('SW registered'))
+        .catch(err => console.log('SW failed', err));
+    }
+  </script>
+</body>
+</html>
